--- a/css/styles.css
+++ b/css/styles.css
@@ -95,27 +95,33 @@ body {
 }
 
 .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80");
+  background: linear-gradient(
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.9)
+    ),
+    url("../assets/photo_2025-08-05_16-51-33.jpg");
   background-size: cover;
   background-position: center;
-  height: 80vh;
+  height: 91vh;
   display: flex;
   align-items: center;
-  color: var(--white);
+  color: #ff0000;
   text-align: center;
 }
-
+.hero-content {
+  margin-top: 5%;
+}
 .hero-content h1 {
   font-size: 3.5rem;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-top: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .hero-content p {
   font-size: 1.5rem;
-  margin-bottom: 30px;
+  margin-top: 30px;
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
