--- a/css/styles.css
+++ b/css/styles.css
@@ -101,8 +101,10 @@ body {
       rgba(0, 0, 0, 0.9)
     ),
     url("../assets/photo_2025-08-05_16-51-33.jpg");
-  background-size: cover;
+  background-size: 100%;
+  background-repeat: no-repeat;
   background-position: center;
+  width: 100%;
   height: 91vh;
   display: flex;
   align-items: center;
