--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,9 @@ body {
       rgba(0, 0, 0, 0.9)
     ),
     url("../assets/photo_2025-08-05_16-51-33.jpg");
-  background-size: 100%;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
   height: 91vh;
   display: flex;
   align-items: center;
@@ -479,7 +478,6 @@ section {
   .h3 {
     font-size: 1.5rem;
   }
-
   section {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -533,6 +531,14 @@ section {
   }
   .navbar-logo-svg {
     height: 38px;
+  }
+  .hero {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+      url("../assets/photo_2025-08-05_16-51-42.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 78vh;
   }
   .hero-content h1 {
     font-size: 2rem;
